Improve Codebase     - Improve button component implementation     - Improve Background text styling     - Fix the Folder-like clipping     - Improve accessibility

--- a/app/Home.module.css
+++ b/app/Home.module.css
@@ -1,3 +1,4 @@
+/* Hero Section Styling */
 .heroSection {
   width: 100%;
   height: calc(100vh - 6rem - 5vw);
@@ -46,15 +47,7 @@
 }
 
 .heroSectBgText {
-  display: inline;
-  position: absolute;
   bottom: 10%;
   right: 0;
   transform: translateX(58%);
-  font-family: var(--font-outfit);
-  font-size: 15rem;
-  font-style: 900;
-  letter-spacing: 3px;
-  user-select: none;
-  opacity: 0.02;
 }
